# curvaBSpline

./: CMakeLists.txt  main.cpp
